--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - TRYBE!</h1>
     </header>
-    <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
+    <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="minha foto">
 
     <a href="https://www.instagram.com/diego_morgoth/" target="_blank">Diego Mendes</a>
     
     <article>
-        <h3>Minha tragetória TRYBE até agora!</h3>
+        <h2>Minha tragetória TRYBE até agora!</h2>
         <section>Bom dia, boa tarde e boa noite, meu nome é <i><strong>Diego</strong></i> e gostaria de dividir com vcs minha esperiência até o momento no mundo da programação,em 2 semanas de curso passei de uma pessoa que não sabia absolutamente nada sobre programação, pra alguém que já consegue arranhar a criação de sua pŕopria página da net, devo tudo isso à <a href="https://www.betrybe.com/" target="_blank">TRYBE</a> e só tenho a agradecer a todos os envolvidos neste projeto que mudará nossas vidas!
         </section>
     </article>
 
     <aside>
-        <h3>Sobre as SoftSkills</h3>
+        <h2>Sobre as SoftSkills</h2>
         <section>Importante pontuar que não só de código, assim sendo gostaria também de parebenizar a todos os envolvidos por todo o suporte com nossas SoftSkills, tornando-nos profissionais que respeitam e tem empatia pelo próximo.            
         </section>
     </aside>
@@ -52,6 +52,7 @@
         <li>Inspect</li>
     </ul>
     <footer id="rodape">Todos os direitos reservados,Diego</footer>
+    <nav><a href="https://github.com/Diego-AS-Mendes" target="_blank">GitHub</a></nav>
 
 </body>
 </html>
