--- a/index.html
+++ b/index.html
@@ -14,39 +14,41 @@
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
         <br>
         <article id="artigo">
-            <h2>Texto artigo</h2>
-            <p>O artigo deverá possuir mais de 300 caracteres e menos de 600, além disto deve possuir a tag article.</p>
+            <h2>O início de uma jornada</h2>
+            <p>Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
+                A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p>
         </article>
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <h3>Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
-            <li>Item 6</li>
-            <li>Item 7</li>
-            <li>Item 8</li>
-            <li>Item 9</li>
-            <li>Item 10</li>
+            <li>Fundamentos do Desenvolvimento Web</li>
+            <li>Unix & Shell</li>
+            <li>Unix & Bash</li>
+            <li>Git & GitHub</li>
+            <li>Como a Internet Funciona</li>
+            <li>HTML & CSS</li>
+            <li>Estruturas de Página</li>
+            <li>Seletores e Posicionamento</li>
+            <li>HTML Semântico</li>
+            <li>Introdução ao JavaScript</li>
         </ol>
         <br>
         <h3>Lições a aprender</h3>
         <ul id="licoes_a_aprender">
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
-            <li>Item 6</li>
-            <li>Item 7</li>
-            <li>Item 8</li>
-            <li>Item 9</li>
-            <li>Item 10</li>
+            <li>JavaScript</li>
+            <li>Lógica de Programação</li>
+            <li>DOM e Seletores</li>
+            <li>Web Storage</li>
+            <li>CSS Flexbox</li>
+            <li>CSS Responsivo</li>
+            <li>JavaScript ES6</li>
+            <li>JavaScript Assíncrono e Callbacks</li>
+            <li>JavaScript Promises</li>
+            <li>Jest</li>
         </ul>
     </body>
     <footer id="rodape">
         <p>Rodapé</p>
     </footer>
 </html>
+
