--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Requisito 08 - OK -->
-        <article class="lado-esquerdo">
+        <article class="lado-esquerdo" id="artigo-principal">
             <h2>Aprendizado</h2>
             <p>
                 asdfasdfasdfasdfasdfasdfasdfasdfasdfasfdasdfasdfasdf
@@ -37,7 +37,7 @@
             </p>
         </article>
         
-        <!-- Requisito 09 - -->
+        <!-- Requisito 09 - OK -->
         <aside class="lado-direito">
             <h2>Trilhando o Aprendizado</h2>
             <section>
@@ -88,7 +88,16 @@
     </main>
     <!-- Requisito 06 e 07 - OK -->
     <footer id="rodape">
-        <p>Conteúdo compilado por <a target="_blank" href="https://gabrielrodriguesleite.github.io">Gabriel Rodrigues Leite</a>, 2021.</p>
+        <!-- Requisito 10 - OK -->
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#artigo-principal">Artigo Principal</a></li>
+                <li><a target="_blank" href="https://gabrielrodriguesleite.github.io">Sobre</a></li>
+                <li>← Site map</li>
+            </ul>
+        </nav>
+        <p>Desenvolvido por <a target="_blank" href="https://gabrielrodriguesleite.github.io">Gabriel Rodrigues Leite</a>, 2021.</p>
     </footer>
 </body>
 </html>
@@ -103,8 +112,8 @@
 <!-- OK 06 - footer id="rodape" -->
 <!-- OK 07 - >=1 link externo target="_blank" -->
 <!-- OK 08 - article > 300 caracteres < 600 -->
-<!--    09 - seção tag→aside >300 caracteres <600 -->
-<!--    10 - 1 de cada: article header nav section aside footer -->
+<!-- OK 09 - seção tag→aside >300 caracteres <600 -->
+<!-- OK 10 - 1 de cada: article header nav section aside footer -->
 <!--    11 - Passar no Codesniffer -->
 <!-- BÔNUS -->
 <!--    12 - 1 table -->
