Alteraçoes em STYLE 3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="titulo">The First Project </h1>
     <title> Lessons Learned </title>
 </div>
-<h3 id="botoes"> <a link href="https://www.linkedin.com/in/celsofiorani/" target="_blank">LinkedIn</a> |<a link href="https://www.instagram.com/fioranicelso/" target="_blank">Instagram</a> | <a link href="https://github.com/fioranicelso target=" target="_blank" >GitHub</a></h3>
+<nav h3 id="botoes"> <a link href="https://www.linkedin.com/in/celsofiorani/" target="_blank">LinkedIn</a> |<a link href="https://www.instagram.com/fioranicelso/" target="_blank">Instagram</a> | <a link href="https://github.com/fioranicelso target=" target="_blank" >GitHub</a></h3></nav>
 </header>  
 
 <body class="body">
@@ -28,7 +28,7 @@
    <li>Slack</li>
  <li>O jeito tryber de ser</li> 
 </ol>
- <ul id="licoes">
+ <ul id="licoes_a_aprender">
      <h2>O que eu vou aprender?</h2>
     <li>Java</li>
     <li>JavaScript</li>
@@ -49,10 +49,11 @@
     Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
     vocês são a parte fundamental para isso aqui tudo estar acontecendo #VQV! 
 </article>
-<section id="aside"> 
-    <h2> O meu aprendizado</h2>
-    Desde o dia 09 de Agosto eu já posso dizer com tranquilidade que seu usar Linux, hoje em dia uso o ubunto,
-    consigo usar os comandos usando o Unix e Bash, sei como funciona os padrões e protocolos da Internet e consigo criar e estilizar uma página com a dupla HTML e CSS. Além de usar o GIT e o GITHUB para que todo o meu trabalho seja visto por todo mundo.
+<section>
+    <aside> 
+        <h2> O meu aprendizado</h2>
+        Consigo usar o Linux, consigo usar os comandos usando o Unix e Bash, sei como funciona os padrões e protocolos da Internet e consigo criar e estilizar uma página com a dupla HTML e CSS. Além de usar o GIT e o GITHUB para que todo o meu trabalho seja visto por todo mundo.
+    </aside>
 </section>
 </div>
 
