--- a/index.html
+++ b/index.html
@@ -1,58 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo"> neithan</h1>
-    </header>
-    <main>
-        <section>
-            <img id="minha_foto" src="nathannunes.jpeg" alt="">
-        </section>
 
-        <section>
-            <ol id="licoes_aprendidas">
-                <li>Bash</li>
-                <li>Unix</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Funcionabilidade da Internet</li>
-                <li>Html</li>
-                <li>Css</li>
-                <li>HTML Sêmantico</li>
-                <li>Pseudoclasses</li>
-                <li>Box Model</li>
-            </ol>
-        </section>
+  <header id="cabecalho">
+    <h1 id="titulo"> neithan</h1>
+    
+    <nav>
+      <ul>
+        <li>Contatos</li>
+        <li>Sobre mim</li>
+        <li>Aprendizados</li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <img id="minha_foto" src="nathannunes.jpeg" alt="Imagem de Nathan Nunes">
+    </section>
 
-        <section>
-            <ul id="licoes_a_aprender">
-                <li>Array</li>
-                <li>Loop</li>
-                <li>Objetos</li>
-                <li>Funções</li>
-                <li>DOM</li>
-                <li>Web Storage</li>
-                <li>React</li>
-                <li>Jest</li>
-                <li>Backend</li>
-                <li>Introdução a Ciência da Computação</li>
-            </ul>
-        </section>
-    </main>
-    <footer id="rodape">
-        <section>
-            <ul><h3>Contatos:</h3>
-                <li><a class="linksThemes" href="https://www.linkedin.com/in/nathannunes-/" target="_blank">Linkedin</a></li>
-                <li><a class="linksThemes" href="https://github.com/NunesNathan" target="_blank">GitHub</a></li>
-            </ul>
-        </section>
-    </footer>
+    <section id="learnings">
+      <section>
+        <ol id="licoes_aprendidas"> <h2>aaa</h2>
+          <li>Bash</li>
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Funcionabilidade da Internet</li>
+          <li>Html</li>
+          <li>Css</li>
+          <li>HTML Sêmantico</li>
+          <li>Pseudoclasses</li>
+          <li>Box Model</li>
+        </ol>
+      </section>
+
+      <section>
+        <ul id="licoes_a_aprender"> <h2>aaa</h2>
+          <li>Array</li>
+          <li>Loop</li>
+          <li>Objetos</li>
+          <li>Funções</li>
+          <li>DOM</li>
+          <li>Web Storage</li>
+          <li>React</li>
+          <li>Jest</li>
+          <li>Backend</li>
+          <li>Introdução a Ciência da Computação</li>
+        </ul>
+      </section>
+    </section>
+
+    <section>
+      <section>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto et molestias ex sunt quis vero kdfj uay poi 
+            sit. Non cupiditate suscipit fugit. Perferendis, ratione sint ipsam nemo quas aspernatur. Id, soluta. kjskka jsuuygu jsooquwjmx jsjsjsha
+          </p>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quam reprehenderit hic officiis, a eum quos aliquam
+            dignissimos dicta ea nisi, nam exercitationem vitae cupiditate inventore magnam non
+          </p>
+        </aside>
+      </section>
+    </section>
+  </main>
+
+  <footer id="rodape">
+    <section>
+      <ul><h3>Contatos:</h3>
+        <li><a class="linksThemes" href="https://www.linkedin.com/in/nathannunes-/" target="_blank">Linkedin</a></li>
+        <li><a class="linksThemes" href="https://github.com/NunesNathan" target="_blank">GitHub</a></li>
+      </ul>
+    </section>
+  </footer>
+
 </body>
 </html>
