change aside for section and adding a contact list

--- a/index.html
+++ b/index.html
@@ -93,14 +93,26 @@
                 </div>
             </section>
     
-            <aside>
+            <section class="personal_info">
                 <div>
-                    <!-- Lista contatos -->
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="" alt="github icon"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer"><img src="" alt="linkedin icon"></a>
+                            </li>
+                            <li>
+                                <a href="mailto:gabriel.h.silvestre11@gmail.com"><img src="" alt="email icon"></a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus illum ut vero at, commodi reiciendis? Quis ea itaque error nesciunt praesentium nemo quidem, assumenda sunt minus animi doloribus, alias quasi.</p>
-                </div>
-            </aside>
+                <aside class="short_resume">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus illum ut vero at, commodi reiciendis?</p>
+                </aside>
+            </section>
         </div>
     </main>
 
