Todos os requisitos bonus e melhorias

--- a/index.html
+++ b/index.html
@@ -14,45 +14,64 @@
             <a href="http://127.0.0.1:5500/index.html" title="Página inicial">Home</a>
         </nav>
     </header>
-    <img id="minha_foto" src="image/IMG_7173.JPG" alt="Cleiton Ribeiro social">
+        <img id="minha_foto" src="image/IMG_7173.JPG" alt="Cleiton Ribeiro social">
+        <p class="meu-git"><a href="https://github.com/Cleitonsub" target="_blank" style="text-decoration: none;" title="Meu GitHub" >Cleiton Ribeiro</a></p>
     <section class="lista_de_licoes">
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+        <table>
+            <tr>
+                <th>Lições aprendidas</th>
+            </tr>
+                <tr>
+                    <td>
+                        <ol id="licoes_aprendidas">
+                            <li>Unix</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Empatia</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Slack</li>
+                            <li>Zoom</li>
+                            <li>Inspect</li>
+                            <li>Semantic HTML</li>
+                        </ol>
+                    </td>
+                </tr>
+            <tr>
+        </table>
+        <table>
+                <th>Lições a aprender</th>
+            </tr>
+                <tr>
+                    <td>
+                        <ul id="licoes_a_aprender">
+                            <li>JavaScript</li>
+                            <li>DOM</li>
+                            <li>Forms</li>
+                            <li>CSS Responsive</li>
+                            <li>ES6</li>
+                            <li>HOF</li>
+                            <li>Unit Tests</li>
+                            <li>React</li>
+                            <li>Node</li>
+                            <li>SQL</li>
+                        </ul>
+                    </td>
+                </tr>
+        </table>
     </section>
     <article>
         <section>
-            <p>O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido. O que me ajudou bastante foi o momento em que pratiquei as navegações e configurações no terminal do Linux.</p>
+                <p class="lado-esquerdo">O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido.</p>
         </section>
-        <section>
-            <aside id="meu_aprendizado">
-                As aulas na <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> não são fáceis. Depois da minha primeira semana, fui capaz de perceber que apenas o horário normal de aula não seria o suficientes, apesar das aulas serem bem didáticas.
-            </aside>
-        </section>
+            <section>
+                <aside id="meu_aprendizado">
+                    <p class="lado-direito">As aulas na <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> não são fáceis. Depois da minha primeira semana, fui capaz de perceber que apenas o horário normal de aula não seria o suficientes, apesar das aulas serem bem didáticas.</p>
+                </aside>
+            </section>
     </article>
     <footer id="rodape">
-        <p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Tryber</a>.</p>
+        <br><p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Tryber</a>.</p>
     </footer>
 
 </body>
