--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
       <li>Seletores e posicionamento - HTML & CSS;</li>
       <li>HTML Semântico;</li>
     </ol>
+
+    <ul id="licoes_a_aprender"><h3>Ainda tenho muito à aprender:</h3>
+      <li>JavaScript;</li>
+      <li>Forms, Flexbox e Responsivo - HTML e CSS;</li>
+      <li>React;</li>
+      <li>Metodologias Ágeis;</li>
+      <li>Redux;</li>
+      <li>SQL;</li>
+      <li>Normalização e Modelagem de Bando de Dados; </li>
+      <li>Arquitetura: SOLID e ORM;</li>
+      <li>Python;</li>
+      <li>Soft Skills;</li>
+
+    </ul>
   </article>
 
 </body>
