adding icons on contac list

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="" alt="github icon"></a>
+                                <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="./github.svg" alt="github icon"></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer"><img src="" alt="linkedin icon"></a>
+                                <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer"><img src="./linkedin.svg" alt="linkedin icon"></a>
                             </li>
                             <li>
-                                <a href="mailto:gabriel.h.silvestre11@gmail.com"><img src="" alt="email icon"></a>
+                                <a href="mailto:gabriel.h.silvestre11@gmail.com"><img src="./mail.svg" alt="email icon"></a>
                             </li>
                         </ul>
                     </nav>
