Adiciona alguns estilos

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 	<section id="quem-sou">
 		<h2>Victor Hugo Bezerra</h2>
 		<img id="minha_foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
-		<h2 id="redes-sociais">Redes Sociais:</h2>
-		<ul>
+		<h2 id="redes-sociais">Redes Sociais</h2>
+		<ul class="redes-list">
 			<li><a href="https://www.linkedin.com/in/victorhbm/" target="_blank">LinkedIn</a></li>
 			<li><a href="https://github.com/Victorhbm" target="_blank">GitHub</a></li>
 		</ul>
 	</section>
 
 	<section class="licoes">
-		<h2>Lições aprendidas:</h2>
+		<h2>Lições aprendidas</h2>
 		<ol id="licoes_aprendidas">
 			<li>Unix</li>
 			<li>Bash</li>
@@ -44,7 +44,7 @@
 			<li>HTML Semântico</li>
 			<li>Box Model</li>
 		</ol>
-		<h2>Lições a aprender:</h2>
+		<h2>Lições a aprender</h2>
 		<ul id="licoes_a_aprender">
 			<li>JavaScript</li>
 			<li>React</li>
