applying style in contact list

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     
             <section class="personal_info">
                 <div>
-                    <nav>
-                        <ul>
+                    <nav class="navbar">
+                        <ul class="d_flex split_between social_icons">
                             <li>
                                 <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="./github.svg" alt="github icon"></a>
                             </li>
