--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
     </div>
 
     <img id="minha_foto" src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
+
+    <ol id="licoes_aprendidas">
+       <li>Unix</li>
+       <li>Git</li>
+       <li>GitHub</li>
+       <li>Empatia</li>
+       <li>HTML</li>
+       <li>CSS</li>
+       <li>Slack</li>
+       <li>Zoom</li>
+       <li>Inspect</li>
+       <li>Semantica HTML</li>
+    </ol>
 </body>
 </html>
