import and applying another fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&display=swap" rel="stylesheet">
     <title>Lessons Learned</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
     <header id="cabecalho" class="cover_width">
         <div class="container d_flex">
             <section class="d_flex center_all">
-                <h1 id="titulo">Me</h1>
+                <h1 class="titles" id="titulo">Me</h1>
                 <img src="./coffee.svg" alt="home icon">
             </section>
 
@@ -33,7 +36,7 @@
             <div class="container sec_about_me">
                 <section class="d_flex flex_column center_horizontal sec_ab_1">
                     <div class="presentation">
-                        <h2 class="border_secondary cover_height">Gabriel Silvestre</h2>                    
+                        <h2 class="titles border_secondary cover_height">Gabriel Silvestre</h2>                    
                     </div>
                     <div class="my_infos border_secondary">
                         <ul class="d_flex no_decoration">
@@ -57,7 +60,7 @@
         <div class="d_flex container sec_divisor split_between">
             <section id="skills" class="cover_width">
                 <div class="sec_title">
-                    <h3 class="title_skills border_secondary">Skills</h3>
+                    <h3 class="titles title_skills border_secondary">Skills</h3>
                 </div>  
                 <div class="sec_skills d_flex split_between">              
                     <section>
@@ -76,7 +79,7 @@
                     </section>
         
                     <section>
-                        <h4 class="border_secondary">Not-Learned</h4>
+                        <h4 class="titles border_secondary">Not-Learned</h4>
                         <ul id="licoes_a_aprender" class="d_flex flex_column split_between no_decoration lessons">
                             <li>Web-responsivity</li>
                             <li>Jest.js</li>
