--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body id="la">
     <header id="cabecalho">
         <h1 id="titulo">Aprendizado - Trybe</h1>
+        <nav>
+            <div class="navegacao">
+                <ul class="navegacao">
+                     <li class="nav inicio"><a href="#la">Inicio</a></li>
+                     <li class="nav listas"><a href="#licoes_a_aprender">Listas</a></li>
+                     <li class="nav final"><a href="#rodape">Rodapé</a></li>
+                
+            </div>
+        </ul>
+    </nav>
     </header>
     <main>
         <article>
@@ -52,5 +62,12 @@
             </section>
         </article>
     </main>
+    <footer id="rodape">
+        <address>
+            Escrito por <a class="contatos" href="mailto:thauler98@gmail.com">Thauler</a>.<br>
+            Local de aprendizado: <a class="contatos" href="https://app.betrybe.com/course" target="_blank">Trybe</a><br>
+            Brasil
+        </address>
+    </footer>
 </body>
 </html>
