finalizacao do projeto

--- a/index.html
+++ b/index.html
@@ -12,56 +12,59 @@
     <main>
       <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
       <hr>
-      <section id="ensinamentos_current">
-        <h2>Ensinamentos Trybe atá o momento!</h2>
-        <article>
-          <p>
-            Primeiro o Bash, responsável pela comunicação dev-máquina.
-            Em seguida temos o Git, uma plataforma de versionamento de código. Nos ajuda a ter um maior controle sobre o código conforme adicionamos mais conteúdo.
-            Temos também o GitHub, um repositório remoto onde esses códigos são salvos.
-            Então ao HTML e CSS, responsáveis pela criação de websites. O Html é uma linguagem de marcação de texto, responsável pelo conteúdo visual que queremos na página.
-            O CSS por sua vez é responsável pela estilização da página.
-          </p>
-        </article>
-        <h2>Uma breve passagem</h2>
-        <aside>
-          <p>
-            Esse primeiro projeto! Estou nervoso, porém otimista :D<br>
-            Acredito que é um ótimo desafio para por a prova o conteúdo absorvido até aqui.
-          </p>
-        </aside>
-      </section>
-      <section>
-        <div>
-          <h2>Lições Aprendidas</h2>
-          <ol id="licoes_aprendidas">
-            <li>Bash</li>
-            <li>Git e GitHub</li>
-            <li>SoftSkills</li>
-            <li>Disciplina</li>
-            <li>Colaboração</li>
-            <li>Boas práticas</li>
-            <li>Lógica de programação</li>
-            <li>Html (superficialmente)</li>
-            <li>Css (superficialmente)</li>
-            <li>Html semântico</li>
-          </ol>
-        </div>
-        <div>
-          <h2>Lições a aprender</h2>
-          <ul id="licoes_a_aprender">
-            <li>Mais sobre Bash</li>
-            <li>Mais sobre Git</li>
-            <li>Aperfeiçoar SoftSkills</li>
-            <li>Aprofundar em Lógica</li>
-            <li>Mais sobre Html</li>
-            <li>Mais sobre Css</li>
-            <li>JavaScript</li>
-            <li>Front-end</li>
-            <li>Back-end</li>
-            <li>Ciência da computação</li>
-          </ul>
-        </div>
+      <section class="bloco">
+        <section class="lado-esquerdo">
+          <h2>Ensinamentos Trybe atá o momento!</h2>
+          <article>
+            <p>
+              Primeiro Bash, usado no terminal.
+              Então temos o Git, uma plataforma de versionamento de código. Nos ajuda a ter um maior controle sobre o código conforme adicionamos mais conteúdo.
+              Temos também o GitHub, um repositório remoto onde esses códigos são salvos.
+              Então ao HTML e CSS, usados para a criação de sites. O Html é uma linguagem de marcação de texto, responsável pelo conteúdo visual que queremos na página.
+              O CSS por sua vez é responsável pela estilização da página.
+            </p>
+          </article>
+          <h2>Uma breve passagem</h2>
+          <aside>
+            <p>
+              Esse primeiro projeto está se provando uma verdadeira aula! Acabei aprendendo mais coisas enquanto buscava resolver problemas.<br>
+              Um mar calmo não faz um bom marinheiro!
+              <img id="coding_cat" alt="gatinho codando" src="coding.gif">
+            </p>
+          </aside>
+        </section>
+        <section class="lado-direito">
+          <div>
+            <h2>Lições Aprendidas</h2>
+            <ol id="licoes_aprendidas">
+              <li>Bash</li>
+              <li>Git e GitHub</li>
+              <li>SoftSkills</li>
+              <li>Disciplina</li>
+              <li>Colaboração</li>
+              <li>Boas práticas</li>
+              <li>Lógica de programação</li>
+              <li>Html (superficialmente)</li>
+              <li>Css (superficialmente)</li>
+              <li>Html semântico</li>
+            </ol>
+          </div>
+          <div>
+            <h2>Lições a aprender</h2>
+            <ul id="licoes_a_aprender">
+              <li>Mais sobre Bash</li>
+              <li>Mais sobre Git</li>
+              <li>Aperfeiçoar SoftSkills</li>
+              <li>Aprofundar em Lógica</li>
+              <li>Mais sobre Html</li>
+              <li>Mais sobre Css</li>
+              <li>JavaScript</li>
+              <li>Front-end</li>
+              <li>Back-end</li>
+              <li>Ciência da computação</li>
+            </ul>
+          </div>
+        </section>
       </section>
       <hr>
     </main>
@@ -93,7 +96,7 @@
     <nav>
       <ul>
         <li><a href="#minha_foto">Ínicio</a></li>
-        <li><a href="#ensinamentos_current">Ensinamentos</a></li>
+        <li><a href="#licoes_aprendidas">Ensinamentos</a></li>
         <li><a href="#rodape">Recomendação de blog</a></li>
       </ul>
     </nav>
