--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mina">
     <link rel="stylesheet" href="style.css">
     <title>Projeto - 01</title>
 </head>
@@ -19,6 +20,26 @@
         <!-- Requisito 03 - OK -->
         <div class="foto-perfil">
             <img id="minha_foto" src="pp.jpg" alt="minha foto">
+            <!-- Requisito 12 - OK-->
+            <table>
+
+                <tbody>
+                    <tr>
+                        <th>cabeçalho 1</th>
+                        <th>cabeçalho 2</th>
+                    </tr>
+                    <tr>
+                        <td>skill1</td>
+                        <td><progress value="34" max="100">34%</progress></td>
+                    </tr>
+                    <tr>
+                        <td>skill2</td>
+                        <td><progress value="78" max="100">78%</progress></td>
+                    </tr>
+
+                </tbody>
+                
+            </table>
         </div>
 
         <!-- Requisito 08 - OK -->
@@ -114,12 +135,12 @@
 <!-- OK 08 - article > 300 caracteres < 600 -->
 <!-- OK 09 - seção tag→aside >300 caracteres <600 -->
 <!-- OK 10 - 1 de cada: article header nav section aside footer -->
-<!--    11 - Passar no Codesniffer -->
+<!-- OK 11 - Passar no Codesniffer -->
 <!-- BÔNUS -->
-<!--    12 - 1 table -->
-<!--    13 - altere margin padding e border -->
-<!--    14 - altere a tipografia tamanho cor espaçamento entre linhas e font family -->
-<!--    15 - classes "lado-esquerdo" e "lado-direito" -->
+<!-- OK 12 - 1 table -->
+<!-- OK 13 - altere margin padding e border -->
+<!-- OK 14 - altere a tipografia tamanho cor espaçamento entre linhas e font family -->
+<!-- OK 15 - classes "lado-esquerdo" e "lado-direito" -->
 <!-- OPCIONAL -->
 <!-- Na página do MEU Pull Request adicione a label de "code-review" e marque os colegas
     * no menu da direita clique em "Labels" e escolah a label [code-review]
