--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned | Rael Nogueira Pires</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
   </head>
 
   <body>
 
     <header id="cabecalho">
-      <h1 id="titulo">Lessons Learned [Projeto]</h1>
+      <h1 id="titulo">LESSONS LEARNED [PROJETO]</h1>
       <nav>
         <h1>Menu de Navegação</h1>
-        <ul>
-          <li>Meu aprendizado</li>
-          <li>Uma passagem</li>
-          <li>GitHub</li>
+        <ul id="navList">
+          <li class="navMenu"><a href="#myLearning"> | MEU APRENDIZADO | </a></li>
+          <li class="navMenu"><a href="#passagem"> | UMA PASSAGEM | </a></li>
+          <li class="navMenu"><a href="#gitLink"> | GITHUB | </a></li>
         </ul>
       </nav>
     </header>
@@ -71,19 +74,19 @@
         </table>
       </section>
 
-      <article>
+      <article id="myLearning">
         <h1>Meu aprendizado na Trybe</h1>
         <p>Minhas aulas na Trybe começaram há cerca de duas semanas atrás e desde então pude ver com os meus próprios olhos que tudo oque foi dito sobre essa escola é verdade. O ambiente acolhedor onde todos podem contribuir e expressar suas dúvidas sem medo de julgamentos, a importância que é dada para as soft-skills, a equipe disposta a te ajudar da melhor maneira possível, a rotina extremamente puxada, a densidade do conteúdo, é tudo verdade. Até então, é a experiência mais diferente que já tive na vida como aluno.</p>
       </article>
     </main>
 
-    <aside>
+    <aside id="passagem">
       <h1>Uma passagem sobre meu aprendizado</h1>
       <p>Um fato engraçado que aconteceu sexta-feira passada (20/08) foi no fechamento do dia. Estava com a cabeça a milhão e acabei tentando entrar no Zoom de fechamento 10 minutos antes do horário, é o clima de sextou!</p>
     </aside>
 
     <footer id="rodape">
-      <p><b></b>Página desenvolvida por Rael Nogueira Pires no Projeto Lessons Learned, 2021.</b></p>
+      <p><b>Página desenvolvida por Rael Nogueira Pires no Projeto Lessons Learned, 2021.</b></p>
     </footer>
 
   </body>
