decimo primeiro requisito completo

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </aside>
   </main>
   <footer id="rodape">
-    <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"></a>
-    <a class="link_redes_sociais" href="https://www.linkedin.com/in/orlando-dantas/" target="_blank"><img src="img/Linkedin.png" alt="I do Linkedin"></a>
+    <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"> <span>(open in a new window)</span> </a>
+    <a class="link_redes_sociais" href="https://www.linkedin.com/in/orlando-dantas/" target="_blank"><img src="img/Linkedin.png" alt="I do Linkedin"> <span>(open in a new window)</span> </a>
   </footer>
 </body>
 </html>
