correcting style in about_me section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <main>
         <section id="about_me">
             <div class="container sec_about_me">
-                <section class="d_flex flex_column center_horizontal sec_ab_1">
+                <section class="d_flex flex_column sec_ab_1">
                     <div class="presentation">
                         <h2 class="titles border_secondary cover_height">Gabriel Silvestre</h2>                    
                     </div>
-                    <div class="my_infos border_secondary">
+                    <div class="my_infos border_secondary cover_height">
                         <ul class="d_flex no_decoration">
                             <li>Gender: Cis/Male</li>
                             <li>Age: 20</li>
