--- a/index.html
+++ b/index.html
@@ -73,17 +73,21 @@
     </ul>
 
   </nav>
-  <article>
-    O meu aprendizado na trybe está me ajudando muito em questões que nem eu sabia que precisava de ajuda, como por
-    exemplo as soft skills que sinceramente eu não sabia que era uma coisa.
-    todo mundo desde a staff até as pessoas estudantes são otimos sempre ajudando em todas as plataformas que a trybe
-    nos disponibiliza.
-  </article>
+  <div id="container-a">
+    <article>
+      O meu aprendizado na trybe está me ajudando muito em questões que nem eu sabia que precisava de ajuda, como por
+      exemplo as soft skills que sinceramente eu não sabia que era uma coisa.
+      todo mundo desde a staff até as pessoas estudantes são otimos sempre ajudando em todas as plataformas que a trybe
+      nos disponibiliza.
+    </article>
+  </div>
   <section>
-    <aside id="lado direito">
-      Estudar na Trybe está sendo um grande desafio parar mim, porem estou gostando muito da didatica e do jeito que
-      todo mundo tanto os instrutores quanto os alunos são prestativos.
-    </aside>
+    <div id="container-b">
+      <aside id="lado direito">
+        Estudar na Trybe está sendo um grande desafio parar mim, porem estou gostando muito da didatica e do jeito que
+        todo mundo tanto os instrutores quanto os alunos são prestativos.
+      </aside>
+    </div>
   </section>
   <footer id="rodape">
     <h2>
