requisitos que faltaram(tentativa)

--- a/index.html
+++ b/index.html
@@ -36,14 +36,20 @@
       <li>HOF</li>
       <li>Unit Tests</li>
     </ul>
-    <article>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.<br> 
-      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,<br> 
-      ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</p> 
+    <article class="lado-esquerdo">
+      <p>Lorem ipsum dolor sit amet, consectetuer <br>
+         adipiscing elit. Aenean commodo <br> 
+         ligula eget dolor. Aenean massa. Cum <br>
+         sociis natoque  penatibus et magnis<br> 
+         dis parturient montes, nascetur ridi-<br>
+         culus mus. Donec quam felis,ultricies<br> 
+         nec, pellentesque eu, pretium quis, sem. <br>
+         Nulla consequat massa quis enim. Donec.</p> 
     </article>
-    <aside>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.<br> 
-      Cum sociis natoque penatibus et magnis dis p</p>
+    <aside class="lado-direito">
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br>
+         Aenean commodo ligula eget dolor. Aenean massa.<br> 
+         Cum sociis natoque penatibus et magnis dis p</p>
     </aside>
     <table>
       <tr>
@@ -60,7 +66,7 @@
       </tr>
     </table>
     </main>
-    <section>
+    <section id="links_pessoais">
     <nav><a target="_blank" href="https://www.linkedin.com/in/gabriel-augustoo/">Linkedin</a></nav>
     <nav><a target="_blank" href="https://github.com/gabriel-am12">Github</a></nav>
     </section>
