--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </ul>
 
   </nav>
-  <div id="container-a">
+  <div id="lado-direito">
     <article>
       O meu aprendizado na trybe está me ajudando muito em questões que nem eu sabia que precisava de ajuda, como por
       exemplo as soft skills que sinceramente eu não sabia que era uma coisa.
@@ -82,8 +82,8 @@
     </article>
   </div>
   <section>
-    <div id="container-b">
-      <aside id="lado direito">
+    <div id="lado-esquerdo">
+      <aside>
         Estudar na Trybe está sendo um grande desafio parar mim, porem estou gostando muito da didatica e do jeito que
         todo mundo tanto os instrutores quanto os alunos são prestativos.
       </aside>
